--- a/service-consumer/pom.xml
+++ b/service-consumer/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-consumer</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.wangyuan.chapter4microservice</groupId>
+            <artifactId>service-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
