--- a/service-provider-2/pom.xml
+++ b/service-provider-2/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-provider-2</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.wangyuan.chapter4microservice</groupId>
+            <artifactId>service-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
