--- a/service-provider/pom.xml
+++ b/service-provider/pom.xml
@@ -10,7 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-provider</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.wangyuan.chapter4microservice</groupId>
+            <artifactId>service-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
