--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -10,8 +10,27 @@
     <artifactId>eureka-server</artifactId>
     <name>eureka-server</name>
     <description>eureka server</description>
+    <properties>
+        <docker.image.prefix>fofsmile</docker.image.prefix>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.4.9</version>
+                <configuration>
+                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
+                    <buildArgs>
+                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                    </buildArgs>
+                    <username>fofsmile</username>
+                    <password>74woshi2b</password>
+                </configuration>
 
-
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
